syntax = "proto3";
package traveller;

option go_package="./;pb";

message ResultMsg{
    bool success=1;
    string message=2;
}